--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <head>
 	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
-	<script src="js/skrollr.js"></script>
 </head>
 <body>
 	<button id="clickme">Show or Hide</button>
+	<button onclick="openwindow()">Create window</button>
+	<button onclick="resizewindow()">Resize window</button>
 	<img id="SusanStorm" src="susanstorm.png" />
 	<!--<h1 id="title">Title to be blurred</h1>-->
 	<script src="js/script.js"></script>
+	<script src="js/newwindow.js"></script>
 </body>
